--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -1,5 +1,6 @@
 <div>
   <p-card>
+    <h3>Personal Info</h3>
     <form [formGroup]="personalInfo">
       <div class="field">
         <label for="title">Title</label>
